--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,10 @@
                 <nav class="main_nav">
                     <ul class="d-flex flex-row align-items-center justify-content-start">
                     <li class="active"><%= link_to "Home", root_path %></li>
-                    <li><%= link_to "About us", static_pages_about_path %></li>
-                    <li><%= link_to "Classes & Services", static_pages_services_path %></li>
-                    <li><%= link_to "Blog", static_pages_blog_path%></li>
-                    <li><%= link_to "Contact", static_pages_contact_path%></li>
+                    <li><%= link_to "About us", about_path %></li>
+                    <li><%= link_to "Classes & Services", services_path %></li>
+                    <li><%= link_to "Blog", blog_path%></li>
+                    <li><%= link_to "Contact", contact_path%></li>
                     </ul>
                 </nav>
                 <div class="phone d-flex flex-row align-items-center justify-content-start ml-auto">
@@ -66,10 +66,10 @@
         <div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
           <ul>
             <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "About us", static_pages_about_path %></li>
-            <li><%= link_to "Classes & Services", static_pages_services_path %></li>
-            <li><%= link_to "Blog", static_pages_blog_path%></li>
-            <li><%= link_to "Contact", static_pages_contact_path%></li>
+            <li><%= link_to "About us", about_path %></li>
+            <li><%= link_to "Classes & Services", services_path %></li>
+            <li><%= link_to "Blog", blog_path%></li>
+            <li><%= link_to "Contact", contact_path%></li>
           </ul>
         </div>
         <div class="menu_phone d-flex flex-row align-items-center justify-content-start">
@@ -92,10 +92,10 @@
                               <nav class="footer_nav">
                                   <ul class="d-flex flex-sm-row flex-column align-items-sm-start align-items-center justify-content-center">
                                       <li><%= link_to "Home", root_path %></li>
-                                      <li><%= link_to "About us", static_pages_about_path %></li>
-                                      <li><%= link_to "Classes & Services", static_pages_services_path %></li>
-                                      <li><%= link_to "Blog", static_pages_blog_path%></li>
-                                      <li><%= link_to "Contact", static_pages_contact_path%></li>
+                                      <li><%= link_to "About us", about_path %></li>
+                                      <li><%= link_to "Classes & Services", services_path %></li>
+                                      <li><%= link_to "Blog", blog_path%></li>
+                                      <li><%= link_to "Contact", contact_path%></li>
                                   </ul>
                               </nav>
                               <div class="newsletter_container">
@@ -105,7 +105,7 @@
                                   </form>
                               </div>
                               <div class="copyright d-flex flex-row align-items-start justify-content-sm-end justify-content-center"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+      Copyright &copy; All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
       <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
                           </div>
                           <div class="footer_image text-center"><%= image_tag "images/footer.png" %></div>
