--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="background-image:url(../../../../assets/images/index.jpg)"></div>
+		<div class="background_image" style="background-image:url(<%= asset_path 'index.jpg' %>)"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
