--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -112,7 +112,7 @@
 	<!-- Testimonials -->
 
 	<div class="testimonials">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="./../../assets/images/testimonials.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'testimonials.jpg' %>" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6">
@@ -299,7 +299,7 @@
 
 	<div class="blog">
 		<div class="blog_overlay"></div>
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="./../../assets/images/blog.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="<%= asset_path 'blog.jpg'%>" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
