--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -1,7 +1,7 @@
 <!-- Home -->
 
 	<div class="home">
-		<div class="background_image" style="background-image:url(/../../../assets/images/blog_page.jpg)"></div>
+		<div class="background_image" style="background-image:url(<%= asset_path 'blog_page.jpg' %>)"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
