--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-		<div class="background_image" style="background-image:url(<%= asset_path 'about_page.jpg')"></div>
+		<div class="background_image" style="background-image:url(<%= asset_path 'about_page.jpg'%>)"></div>
 		<div class="overlay"></div>
 		<div class="home_container">
 			<div class="container">
