--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -158,6 +158,12 @@
                                 <%= link_to videos_path(page: 1), class: "nav-link"  do %>
                                     <i class="fa fa-youtube-play"></i>Videos
                                 <%end%>
+                                <%= link_to courses_path, class: "nav-link"  do %>
+                                    <i class="fas fa-book"></i>Courses
+                                <%end%>
+                                <%= link_to agenda_path, class: "nav-link"  do %>
+                                    <i class="fas fa-calendar-minus"></i>Agenda
+                                <%end%>
                                 <div id="submenu-1" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
