--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -28,85 +28,20 @@
 				</div>
 			</div>
 			<div class="row services_row">
-				
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_4.png"%></div></div>
-							<div class="service_title">Weight Loss Class</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_5.png"%></div></div>
-							<div class="service_title">Yoga Classes</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
+				<% @courses.each do |course| %>
+					<!-- Service -->
+					<div class="col-xl-4 col-md-6 service_col">
+						<div class="service">
+							<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
+								<div><div class="service_icon"><%= image_tag "images/icon_4.png"%></div></div>
+								<div class="service_title"><%= course.name %></div>
+							</div>
+							<div class="service_text">
+								<p><%= course.description %></p>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_6.png"%></div></div>
-							<div class="service_title">Spinning Class</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_7.png"%></div></div>
-							<div class="service_title">Private Fit Class</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_8.png"%></div></div>
-							<div class="service_title">Nutrition Classes</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Service -->
-				<div class="col-xl-4 col-md-6 service_col">
-					<div class="service">
-						<div class="service_title_container d-flex flex-row align-items-center justify-content-start">
-							<div><div class="service_icon"><%= image_tag "images/icon_9.png"%></div></div>
-							<div class="service_title">Pillates Class</div>
-						</div>
-						<div class="service_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum.</p>
-						</div>
-					</div>
-				</div>
-
+				<% end %>
 			</div>
 		</div>
 	</div>
@@ -126,256 +61,104 @@
 					<div class="timetable_filtering">
 						<ul class="d-flex flex-row align-items-start justify-content-start flex-wrap">
 							<li class="active item_filter_btn" data-filter="*">All Classes</li>
-							<li class="item_filter_btn" data-filter=".weight_loss">Weight Loss</li>
-							<li class="item_filter_btn" data-filter=".aerobics">Aerobics</li>
-							<li class="item_filter_btn" data-filter=".crossfit">Crossfit</li>
-							<li class="item_filter_btn" data-filter=".fitness">Fitness</li>
-							<li class="item_filter_btn" data-filter=".yoga">Yoga</li>
-							<li class="item_filter_btn" data-filter=".pilates">Pilates</li>
-							<li class="item_filter_btn" data-filter=".stretching">Stretching</li>
+							<% @courses.each do |course|%>
+								<li class="item_filter_btn" data-filter=".<%= course.name%>"><%= course.name %></li>
+							<% end %>
 						</ul>
 					</div>
 					<div class="timetable_container d-flex flex-sm-row flex-column align-items-start justify-content-sm-between justify-content-start">
 
 						<!-- Monday -->
-						<div class="tt_day">
-							<div class="tt_title">monday</div>
-							<div class="tt_day_content grid">
+                    <div class="tt_day">
+                        <div class="tt_title">monday</div>
+                        <div class="tt_day_content grid">
+                            <% @monday.each do |day| %>
+                                <!-- Class -->
+                                    <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
+                                        <% if day.course == nil %>
+                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                        <% else %>
+                                            <div class="tt_class_title class-name"><%= day.course.name %></div>
+                                        <% end %>
+                                        <div class="tt_class_time"><%= day.hour %>h</div>
+                                    </div>
+                            <% end %>
+                        </div>
+                    </div>
 
-								<!-- Class -->
-								<div class="tt_class grid-item weight_loss">
-									<div class="tt_class_title">Weight Loss</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
+                    <!-- Tuesday -->
+                    <div class="tt_day">
+                        <div class="tt_title">tuesday</div>
+                        <div class="tt_day_content grid">
+                            <% @tuesday.each do |day| %>
+                                <!-- Class -->    
+                                    <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
+                                        <% if day.course == nil %>
+                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                        <% else %>
+                                            <div class="tt_class_title class-name"><%= day.course.name %></div>
+                                        <% end %>
+                                        <div class="tt_class_time"><%= day.hour %>h</div>
+                                    </div>
+                            <% end %>
 
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
+                        </div>
+                    </div>
 
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
+                    <!-- Wednesday -->
+                    <div class="tt_day">
+                        <div class="tt_title">wednesday</div>
+                        <div class="tt_day_content grid">
 
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
+                            <% @wednesday.each do |day| %>
+                                <!-- Class -->    
+                                    <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
+                                        <% if day.course == nil %>
+                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                        <% else %>
+                                            <div class="tt_class_title class-name"><%= day.course.name %></div>
+                                        <% end %>
+                                        <div class="tt_class_time"><%= day.hour %>h</div>
+                                    </div>
+                            <% end %>
+                        </div>
+                    </div>
 
-							</div>
-						</div>
+                    <!-- Thursday -->
+                    <div class="tt_day">
+                        <div class="tt_title">thursday</div>
+                        <div class="tt_day_content grid">
+                            <% @thursday.each do |day| %>
+                                <!-- Class -->    
+                                    <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
+                                        <% if day.course == nil %>
+                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                        <% else %>
+                                            <div class="tt_class_title class-name"><%= day.course.name %></div>
+                                        <% end %>
+                                        <div class="tt_class_time"><%= day.hour %>h</div>
+                                    </div>
+                            <% end %>
+                        </div>
+                    </div>
 
-						<!-- Tuesday -->
-						<div class="tt_day">
-							<div class="tt_title">tuesday</div>
-							<div class="tt_day_content grid">
-
-								<!-- Class -->
-								<div class="tt_class grid-item weight_loss">
-									<div class="tt_class_title">Weight Loss</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">8:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">12:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Wednesday -->
-						<div class="tt_day">
-							<div class="tt_title">wednesday</div>
-							<div class="tt_day_content grid">
-
-								<!-- Class -->
-								<div class="tt_class grid-item crossfit">
-									<div class="tt_class_title">Crossfit</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">17:00</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Thursday -->
-						<div class="tt_day">
-							<div class="tt_title">thursday</div>
-							<div class="tt_day_content grid">
-								
-								<!-- Class -->
-								<div class="tt_class grid-item fitness">
-									<div class="tt_class_title">Fitness</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item yoga">
-									<div class="tt_class_title">Yoga</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">12:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item pilates">
-									<div class="tt_class_title">Pilates</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Friday -->
-						<div class="tt_day">
-							<div class="tt_title">friday</div>
-							<div class="tt_day_content grid">
-								
-								<!-- Class -->
-								<div class="tt_class grid-item yoga">
-									<div class="tt_class_title">Yoga</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Saturday -->
-						<div class="tt_day">
-							<div class="tt_title">Saturday</div>
-							<div class="tt_day_content grid">
-								
-								<!-- Class -->
-								<div class="tt_class grid-item weight_loss">
-									<div class="tt_class_title">Weight Loss</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item pilates">
-									<div class="tt_class_title">Pilates</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">13:00</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Sunday -->
-						<div class="tt_day">
-							<div class="tt_title">Sunday</div>
-							<div class="tt_day_content grid">
-								
-								<!-- Class -->
-								<div class="tt_class grid-item stretching">
-									<div class="tt_class_title">Stretching</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">9:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class grid-item aerobics">
-									<div class="tt_class_title">Aerobics</div>
-									<div class="tt_class_instructor">Jessica Smith</div>
-									<div class="tt_class_time">10:00</div>
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-
-								<!-- Class -->
-								<div class="tt_class empty grid-item">
-									
-								</div>
-							</div>
-						</div>
-
+                    <!-- Friday -->
+                    <div class="tt_day">
+                        <div class="tt_title">friday</div>
+                        <div class="tt_day_content grid">
+                            <% @friday.each do |day| %>
+                                <!-- Class -->    
+                                    <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
+                                        <% if day.course == nil %>
+                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                        <% else %>
+                                            <div class="tt_class_title class-name"><%= day.course.name %></div>
+                                        <% end %>
+                                        <div class="tt_class_time"><%= day.hour %>h</div>
+                                    </div>
+                            <% end %>
+                        </div>
+                    </div>
 					</div>
 				</div>
 			</div>
