--- a/app/views/static_pages/blog.html.erb
+++ b/app/views/static_pages/blog.html.erb
@@ -34,7 +34,7 @@
 					</div>
 					<div class="col-md-6">
 						<div class="search-form">
-							<%= form_tag(videos_path, :method => :get) do %>
+							<%= form_tag(blog_path, :method => :get) do %>
 								<div class="row">
 									<div class="col-md-8">
 										<%= text_field_tag :name, "", class: 'form-control' %>
