--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -6,8 +6,7 @@
 				<div class="row">
 					<div class="col">
 						<div class="home_content">
-							<div class="home_title">Services</div>
-							<div class="home_subtitle">Pilates, Yoga, Fitness, Spinning & many more</div>
+							<div class="home_title">Classes</div>
 						</div>
 					</div>
 				</div>
@@ -23,7 +22,7 @@
 				<div class="col">
 					<div class="section_title_container">
 						<div class="section_subtitle">welcome to sportfit</div>
-						<div class="section_title">Our Courses</div>
+						<div class="section_title">Our Classes</div>
 					</div>
 				</div>
 			</div>
@@ -76,11 +75,15 @@
                                 <!-- Class -->
                                     <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
                                         <% if day.course == nil %>
-                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                            <div class="tt_class_title class-name">Available</div>
                                         <% else %>
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
-                                        <div class="tt_class_time"><%= day.hour %>h</div>
+										<% if day.hour > 12%>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+										<% else %>
+											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+										<% end %>
                                     </div>
                             <% end %>
                         </div>
@@ -94,11 +97,15 @@
                                 <!-- Class -->    
                                     <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
                                         <% if day.course == nil %>
-                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                            <div class="tt_class_title class-name">Available</div>
                                         <% else %>
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
-                                        <div class="tt_class_time"><%= day.hour %>h</div>
+										<% if day.hour > 12%>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+										<% else %>
+											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+										<% end %>
                                     </div>
                             <% end %>
 
@@ -114,11 +121,15 @@
                                 <!-- Class -->    
                                     <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
                                         <% if day.course == nil %>
-                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                            <div class="tt_class_title class-name">Available</div>
                                         <% else %>
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
-                                        <div class="tt_class_time"><%= day.hour %>h</div>
+										<% if day.hour > 12%>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+										<% else %>
+											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+										<% end %>
                                     </div>
                             <% end %>
                         </div>
@@ -132,11 +143,15 @@
                                 <!-- Class -->    
                                     <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
                                         <% if day.course == nil %>
-                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                            <div class="tt_class_title class-name">Available</div>
                                         <% else %>
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
-                                        <div class="tt_class_time"><%= day.hour %>h</div>
+										<% if day.hour > 12%>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+										<% else %>
+											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+										<% end %>
                                     </div>
                             <% end %>
                         </div>
@@ -150,11 +165,15 @@
                                 <!-- Class -->    
                                     <div class="tt_class grid-item <%if day.course != nil%><%= day.course.name %><%end%>">
                                         <% if day.course == nil %>
-                                            <div class="tt_class_title class-name">No class or session assigned</div>
+                                            <div class="tt_class_title class-name">Available</div>
                                         <% else %>
                                             <div class="tt_class_title class-name"><%= day.course.name %></div>
                                         <% end %>
-                                        <div class="tt_class_time"><%= day.hour %>h</div>
+										<% if day.hour > 12%>
+                                        	<div class="tt_class_time"><%= day.hour - 12 %>-P.M</div>
+										<% else %>
+											<div class="tt_class_time"><%= day.hour %>-A.M</div>
+										<% end %>
                                     </div>
                             <% end %>
                         </div>
@@ -170,18 +189,43 @@
 	<div class="extra d-flex flex-column align-items-center justify-content-center text-center">
 		<div class="background_image" style="background-image:url(<%= asset_path 'extra_wide.jpg' %>)"></div>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-6 offset-md-3">
+			<div class="row title-row">
+				<div class="col-md-8 offset-md-2">
 					<div class="extra_content d-flex flex-column align-items-center justify-content-center text-center">
-						<div class="extra_title">15% Discount</div>
-						<div class="extra_text">
-							<p>Morbi sed varius risus, vitae molestie lectus. Donec id hendrerit velit, eu fringilla neque. Etiam id finibus sapien. Donec sollicitudin luctus ex non pharetra.llus.</p>
-						</div>
-						<div class="button extra_button"><a href="#">Join Now</a></div>
+						<div class="extra_title main_title">Our packages</div>
 					</div>
 				</div>
 			</div>
-		</div>			
+			<div class="row packages-row">
+				<div class="col-md-8 offset-md-2">
+					<div class="extra_content d-flex flex-column align-items-center justify-content-center text-center">
+						<div class="extra_title packages">PACKAGES FOR ONE ON ONE SESSIONS</div>
+					</div>
+				</div>
+			</div>
+			<div class="row packages-row">
+				<div class="col-md-8 offset-md-2">
+					<div class="extra_content d-flex flex-column align-items-center justify-content-center text-center">
+						<div class="extra_title packages">TENDON PACKAGES (SHARING PACKAGE, 2 PEOPLE)</div>
+					</div>
+				</div>
+			</div>
+			<div class="row packages-row">
+				<div class="col-md-8 offset-md-2">
+					<div class="extra_content d-flex flex-column align-items-center justify-content-center text-center">
+						<div class="extra_title packages">GROUP PACKAGE (SHARING PACKAGE, 3 PEOPLE)</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 offset-md-3">
+					<div class="extra_content d-flex flex-column align-items-center justify-content-center text-center">
+						<div class="extra_text"><p>For price informations:</p></div>
+						<div class="button extra_button"><%= link_to 'Contact us', contact_path %></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 <%= javascript_include_tag "js/jquery-3.2.1.min.js"%>
